syntax = "proto3";

package secrets;

option go_package = "/secrets";

message Data {
    string title = 1;
    string value = 2;
}

message CreateSecretRequest {
    string type = 1;
    Data data = 2;
}

message CreateSecretResponse {
    string status = 1;
}

message GetSecretRequest {
    string secret_id = 1;
}

message GetSecretResponse {
    string id = 1;
    string type = 2;
    string status = 3;
    Data data = 4;

}
 
message DeleteSecretRequest {
    string secret_id = 1;
}

message DeleteSecretResponse {
    enum DeleteSecretStatus {
        OK = 0;
        Failed = 1;
    }
    DeleteSecretStatus status = 1;
}

// message EditSecretRequest {
    
// }

// message EditSecretResponse {

// }

service Secrets {
    rpc CreateSecret(CreateSecretRequest) returns (CreateSecretResponse) {}
    rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
    rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse) {}
    // rpc EditSecret(EditSecretRequest) returns (EditSecretResponse);
}